Tools/redis/svc_redis-port.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: redis-port
  namespace: monitoring
spec:
  #ports:
  #  - port: 6379
  #    protocol: TCP
  ports:
  - port: 6379
    targetPort: 6379
  selector:
    app: redis
